# ChatSystem

./: .gitmodules  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  LICENSE  README.md  docker-compose.yml
App/: CMakeLists.txt
App/Include/Cryptography/: encrypted_key_material.h  i_client_encryption_service.h  i_key_derivation_service.h  i_key_store.h  key_pair.h
App/Include/Database/: i_local_database.h
App/Include/Networking/: http_exceptions.h
App/Include/Repositories/: i_local_identity_repository.h  i_local_user_repository.h
App/Include/Services/: i_client_chat_service.h  i_client_message_service.h
App/Source/Cryptography/: client_key_manager.cpp  open_ssl_key_derivation_service.cpp  open_ssl_key_derivation_service.h  sqlite3_key_store.cpp
App/Source/Database/: sqlite3_local_database.cpp  sqlite3_local_database.h
App/Source/Networking/: boost_rest_client.cpp
App/Source/Repositories/: local_identity_repository.h  local_message_repository.cpp
App/Source/Services/: client_auth_service.h  client_message_service.h  client_services_utils.cpp  client_services_utils.h
Tests/: CMakeLists.txt
Tests/Core/: core_tests.cpp
Tests/Server/: session_tests.cpp  user_tests.cpp  validation_tests.cpp
project/src/ChatSystem/App/: CMakeLists.txt
project/src/ChatSystem/App/Include/Cryptography/: encrypted_key_material.h  i_client_key_manager.h  i_key_derivation_service.h  i_key_store.h  key_pair.h
project/src/ChatSystem/App/Include/Database/: i_local_database.h  local_db_models.h
project/src/ChatSystem/App/Include/Networking/: http_exceptions.h  http_response.h  i_rest_client.h
project/src/ChatSystem/App/Include/Repositories/: i_local_chat_repository.h  i_local_identity_repository.h  i_local_message_repository.h  i_local_user_repository.h
project/src/ChatSystem/App/Include/Services/: i_client_auth_service.h  i_client_chat_service.h  i_client_encryption_service.h  i_client_message_service.h  i_client_user_service.h
project/src/ChatSystem/App/Source/: app_main.cpp  tech_demo.cpp
project/src/ChatSystem/App/Source/Cryptography/: client_key_manager.cpp  client_key_manager.h  open_ssl_client_encryption_service.cpp  open_ssl_client_encryption_service.h  open_ssl_key_derivation_service.h  sqlite3_key_store.cpp  sqlite3_key_store.h
project/src/ChatSystem/App/Source/Database/: sqlite3_local_database.cpp  sqlite3_local_database.h
project/src/ChatSystem/App/Source/Networking/: boost_rest_client.cpp  boost_rest_client.h
project/src/ChatSystem/App/Source/Repositories/: local_chat_repository.cpp  local_chat_repository.h  local_identity_repository.cpp  local_identity_repository.h  local_message_repository.cpp  local_message_repository.h  local_user_repository.cpp  local_user_repository.h
project/src/ChatSystem/App/Source/Services/: client_auth_service.cpp  client_auth_service.h  client_chat_service.cpp  client_chat_service.h  client_message_service.cpp  client_message_service.h  client_services_utils.cpp  client_services_utils.h  client_user_service.cpp  client_user_service.h  db_model_json_mapper.h  db_models_json_mapper.cpp  open_ssl_client_encryption_service.h
project/src/ChatSystem/Core/: CMakeLists.txt
project/src/ChatSystem/Core/Include/: tech_demo.h  tech_demo.hpp
project/src/ChatSystem/Core/Include/API/: auth_contract.h  chat_contract.h  message_contract.h  user_contract.h
project/src/ChatSystem/Core/Include/Chat/: chat.h  chat_id.h  chat_params.h  chat_validator.h  chat_validator_for.h
project/src/ChatSystem/Core/Include/Database/: i_connection.h  i_connection_pool.h  i_mapper.h  pooled_connection.h  query_params.h  transaction.h
project/src/ChatSystem/Core/Include/Handlers/: i_message_handler.h  i_protocol_handler.h
project/src/ChatSystem/Core/Include/Id/: base_id.h
project/src/ChatSystem/Core/Include/Message/: encrypted_keys_map.h  message.h  message_id.h  message_params.h  message_validator.h  message_validator_for.h  raw_message.h
project/src/ChatSystem/Core/Include/Networking/: router.h
project/src/ChatSystem/Core/Include/Repositories/: i_chat_repository.h  i_message_repository.h  i_session_repository.h  i_user_repository.h
project/src/ChatSystem/Core/Include/Services/: i_auth_service.h  i_chat_service.h  i_message_service.h  i_notification_service.h  i_server_encryption_service.h  i_user_service.h
project/src/ChatSystem/Core/Include/Session/: session.h  session_params.h  session_validator.h  session_validator_for.h
project/src/ChatSystem/Core/Include/Tags/: user_tag.h
project/src/ChatSystem/Core/Include/TypeLibHelpers/: domain_class_type_variant_factory.h  overload.h
project/src/ChatSystem/Core/Include/User/: user.h  user_params.h  user_role_factory.h  user_validator.h  user_validator_for.h
project/src/ChatSystem/Core/Source/: Core.cpp  tech_demo.cpp
project/src/ChatSystem/Core/Source/Chat/: chat.cpp
project/src/ChatSystem/Core/Source/Message/: message.cpp
project/src/ChatSystem/Core/Source/Networking/: router.cpp
project/src/ChatSystem/Core/Source/User/: user.cpp
project/src/ChatSystem/Server/: CMakeLists.txt
project/src/ChatSystem/Server/Include/Actions/: i_action.h
project/src/ChatSystem/Server/Include/Authentication/: auth_service.h  tags.h
project/src/ChatSystem/Server/Include/Chat/: chat.h  chat_id.h
project/src/ChatSystem/Server/Include/Cryptography/: i_server_encryption_service.h
project/src/ChatSystem/Server/Include/Database/: db_hydration_validator.h  exceptions.h  i_connection.h  i_connection_pool.h  i_result_set.h  i_row.h  pooled_connection.h  query_params.h  transaction.h
project/src/ChatSystem/Server/Include/Encryption/: key_pair.h
project/src/ChatSystem/Server/Include/Handlers/: i_message_handler.h  i_protocol_handler.h
project/src/ChatSystem/Server/Include/Message/: message.h  message_id.h  message_params.h  message_type.h  (+2 more)
project/src/ChatSystem/Server/Source/: main.cpp  server_main.cpp
project/src/ChatSystem/Tests/: CMakeLists.txt
project/src/ChatSystem/Tests/Core/: CoreTests.cpp
project/src/ChatSystem/Tests/Server/: message_tests.cpp  validation_tests.cpp
(+262 files in other folders)
